# SCLIC

./: AES.cpp  AES.h  CMakeLists.txt  README.md  assets.hpp  crc32.c  hardcode.hpp  main.cpp  nonce.h  packages.txt  server  tcp_connection  tcp_connection.cpp  test_crc32.cpp  to_serever  to_serever.c  to_serever.cpp  to_serever_new.cpp  to_server_new
Libs/: CMakeLists.txt  crc32.c  factorisation.h  hardcode.cpp  hardcode.hpp
TL/: auth_tl.cpp  auth_tl.h
Transport/: CMakeLists.txt  assets.hpp  tcp.cpp  tcp.hpp  tl.cpp  tl.hpp
connection/: CMakeLists.txt  connect.cpp  connect.h
crc_32/: CMakeLists.txt  hardcode.cpp  hardcode.hpp  main.cpp
crypto/: crc32.h  factorisation.cpp  nonce.cpp
methods/: CMakeLists.txt  crc32.h  methods.cpp  methods.h
tcp_creating/: CMakeLists.txt  tcp_package.cpp  tcp_package.h
tl_creating/: CMakeLists.txt  builder.cpp  builder.h
tl_scheme/: CMakeLists.txt  classes.cpp  classes.h
